--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
    
     <div id="container" style="height:600px;width:980px;margin:0px;padding:0px;"></div>
     <br><br>
-    <p>Tallene fra TNS Gallup viser et gjennomsnitt av antall daglige unike brukere pr. uke.</p>
+    <p>Tallene fra TNS Gallup viser et gjennomsnitt av antall daglige unike brukere pr. uke.
+    <br/>
+    Laget med <a href="https://www.r-project.org/">R</a>, <a href="https://www.javascript.com/">Javascript</a> og <a href="http://www.highcharts.com">Highcharts</a> av Christian Lura.</p>
 </body>
 </html>
