--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
     <br><br>
     <p>Tallene fra TNS Gallup viser et gjennomsnitt av antall daglige unike brukere pr. uke.
     <br/>
-    Laget med <a href="https://www.r-project.org/">R</a>, <a href="https://www.javascript.com/">Javascript</a> og <a href="http://www.highcharts.com">Highcharts</a> av Christian Lura.</p>
+    Laget med <a href="https://www.r-project.org/">R</a>, <a href="https://www.javascript.com/">Javascript</a> og <a href="http://www.highcharts.com">Highcharts</a> av <a href="https://github.com/chrilur/adressameteret">Christian Lura.</a></p>
 </body>
 </html>
