--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="no">
 <head>
     <meta charset="utf-8" />
-    <title>Adressameteret</title>
+    <title>Bartometeret</title>
     <script type="text/javascript" src="http://multimedia.bt.no/krinkelkroken/templates/charts/javascript/jquery-1.8.2.min.js"></script> 
     <script type="text/javascript" src="http://multimedia.bt.no/krinkelkroken/templates/charts/javascript/tabletop.js"></script>
     <script type="text/javascript" src="data/data.js"></script>
@@ -49,12 +49,12 @@
 						enabled : false
 					},
 					title: {
-						text: 'Adressameteret'
+						text: 'Bartometeret'
 					},
 					xAxis: {
 				        lineWidth: 0, 
                         labels: xaxisstandard,
-						tickInterval: 10,
+						tickInterval: 5,
 						categories: uker
 					},
 					yAxis: { 
