--- a/sider.html
+++ b/sider.html
@@ -10,7 +10,7 @@
 	<script src="http://code.highcharts.com/highcharts.js"></script>
     <style type='text/css'>
  			#container {
-   				 background: url(http://statisk.bt.no/filer/lura/moustache2.jpg);
+   				 background: url(http://statisk.bt.no/filer/lura/moustache3.jpg);
 					}
  	</style>
 <script>
@@ -52,8 +52,8 @@
 						text: 'Bartometeret'
 					},
           subtitle: {
-  					text: 'Unike brukere'
-					},
+            text: 'Sidevisninger'
+          },
 					xAxis: {
 				        lineWidth: 0, 
                         labels: xaxisstandard,
@@ -61,13 +61,13 @@
 						categories: uker
 					},
 					yAxis: { 
-						min: 50000,
+						min: 300000,
 						startOnTick: false,
 						minPadding: 0,
 						gridLineWidth: 0,
 						<!-- lineWidth: 0, -->
 						title: {
-							text: 'Daglige brukere, ukesnitt',
+							text: 'Sidevisninger, ukesnitt',
 							align: 'high'
 						},
 						labels: {
@@ -78,7 +78,7 @@
 					plotOptions: {lineWidth: 50},
 					legend: legende,  
 					scrollbar: noscroll,
-					series: [adrtot, adrnett, adrmobil, bttot, btnett, btmobil]
+					series: [sadrtot, sadrnett, sadrmobil, sbttot, sbtnett, sbtmobil]
 				});
 			});
 
@@ -87,7 +87,7 @@
 <body style='margin:20px;padding:0px;'>
    
     <div id="container" style="height:600px;width:980px;margin:0px;padding:0px;"></div>
-    <p><a href="http://chrilur.github.io/adressameteret/sider.html">Vis sidevisninger.</a></p>
+    <p><a href="http://chrilur.github.io/adressameteret/index.html">Vis unike brukere.</a></p>
     <p>Laget med <a href="https://www.r-project.org/">R</a>, <a href="https://www.javascript.com/">Javascript</a> og <a href="http://www.highcharts.com">Highcharts</a> av <a href="https://github.com/chrilur/adressameteret">Christian Lura.</a></p>
 </body>
 </html>
