--- a/index.html
+++ b/index.html
@@ -89,5 +89,6 @@
     <div id="container" style="height:600px;width:980px;margin:0px;padding:0px;"></div>
     <p><a href="http://chrilur.github.io/adressameteret/sider.html">Vis sidevisninger.</a></p>
     <p>Laget med <a href="https://www.r-project.org/">R</a>, <a href="https://www.javascript.com/">Javascript</a> og <a href="http://www.highcharts.com">Highcharts</a> av <a href="https://github.com/chrilur/adressameteret">Christian Lura.</a></p>
+    <p><a href="http://chrilur.github.io/btbameteret/index.html">BTBAmeteret</a></p>
 </body>
 </html>
